2012-12-13  Sancho Lerena <slerena@artica.es>

	* operation/agentes/datos_agente.php: Uses "mono" instead
	"lucida console" because CSS doesn't speak proper font language :)

2012-12-13  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_api.php,
	  include/functions_netflow.php,
	  operation/netflow/nf_live_view.php: Further improved netflow
	  performance.

2012-12-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_ui.php
	include/javascript/jquery.pandora.controls.js
	godmode/groups/configure_group.php
	godmode/groups/group_list.php
	godmode/alerts/configure_alert_template.php
	godmode/alerts/alert_templates.php
	godmode/alerts/configure_alert_action.php
	godmode/alerts/configure_alert_command.php
	godmode/alerts/alert_actions.php
	godmode/alerts/alert_commands.php
	godmode/users/configure_user.php
	godmode/modules/manage_network_components_form.php
	godmode/modules/manage_nc_groups_form.php
	godmode/modules/manage_network_components_form_common.php
	godmode/modules/manage_network_components_form_network.php
	godmode/modules/manage_network_components_form_wmi.php
	godmode/modules/manage_network_components.php
	godmode/modules/manage_nc_groups.php
	godmode/modules/manage_network_components_form_plugin.php: New
	editors for metaconsole: alerts, components, users and groups.

2012-12-12  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/reporting_builder.list_items.php: Fixed the
	modules/agents shown in the table of report items in inventory
	kind
	merged from 4.0.2

2012-12-12 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map_editor.php: increased the size of
	agent autocomplete widget.
	
	* include/functions_visual_map.php: in the function
	"visual_map_print_visual_map" changed for to print corretly the
	urls in public view in metaconsole.
	
	* include/ajax/agent.php: restore the search for any string in
	the autocomplete agent.
	
	* operation/reporting/reporting_xml.php,
	operation/search_results.php,